Fixed bug where event listeners were getting stacked

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <body>
     <h1>Tic Tac Toe</h1>
     <div class="menu">
-      <button class="newGame">New Game</button>
-      <button class="resetGame">Reset</button>
+      <button id="resetGame">Reset</button>
     </div>
     <div id="gameBoard">
       <div class="marker" data-square="0"></div>
