--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
       <div class="marker" data-square="7"></div>
       <div class="marker" data-square="8"></div>
     </div>
-    <div id="playerTurn"></div>
+    <div id="gameState"></div>
   </body>
 </html>
