Added the ability to change player names

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <h1>Tic Tac Toe</h1>
     <div class="menu">
       <button id="resetGame">Reset</button>
+      <form id="changeNameForm">
+        <input type="text" id="playerOneName" name="updateName" placeholder="Player One" value = "Player One">
+        <input type="submit" value="Change Name">
+        <input type="text" id="playerTwoName" name="updateName" placeholder="Player Two" value = "Player Two">
+        <input type="submit" value="Change Name">
+
+      </form>
     </div>
     <div id="gameBoard">
       <div class="marker" data-square="0"></div>
